--- a/gcc-4.0.2/gcc-4.0.2/libiberty/Makefile.in
+++ b/gcc-4.0.2/gcc-4.0.2/libiberty/Makefile.in
@@ -102,7 +102,7 @@ FLAGS_TO_PASS = \
 	"tooldir=$(tooldir)"
 
 # Subdirectories to recurse into. We need to override this during cleaning
-SUBDIRS = testsuite
+SUBDIRS = 
 
 # FIXME: add @BUILD_INFO@ once we're sure it works for everyone.
 all: stamp-picdir $(TARGETLIB) needed-list required-list all-subdir
