--- a/branches/v3_24/acme/bfd/Makefile.in
+++ b/branches/v3_24/acme/bfd/Makefile.in
@@ -129,7 +129,7 @@ INCDIR = $(srcdir)/../include
 CSEARCH = -I. -I$(srcdir) -I$(INCDIR)
 MKDEP = gcc -MM
 
-SUBDIRS = doc po
+SUBDIRS = 
 
 docdir = doc
 bfdlibdir = @bfdlibdir@
