--- a/branches/v3_24/acme/binutils/Makefile.in
+++ b/branches/v3_24/acme/binutils/Makefile.in
@@ -120,7 +120,7 @@ INTLLIBS = @INTLLIBS@
 
 AUTOMAKE_OPTIONS = cygnus dejagnu
 
-SUBDIRS = doc po
+SUBDIRS = 
 
 tooldir = $(exec_prefix)/$(target_alias)
 
