--- a/branches/v3_24/acme/etc/Makefile.in
+++ b/branches/v3_24/acme/etc/Makefile.in
@@ -54,7 +54,7 @@ DVIFILES = standards.dvi configure.dvi
 all:
 
 # We want install to imply install-info as per GNU standards.
-install: install-info
+install: 
 
 uninstall:
 
