--- a/branches/v3_24/acme/gas/Makefile.in
+++ b/branches/v3_24/acme/gas/Makefile.in
@@ -116,7 +116,7 @@ INTLLIBS = @INTLLIBS@
 
 AUTOMAKE_OPTIONS = cygnus dejagnu
 
-SUBDIRS = doc po
+SUBDIRS = 
 
 tooldir = $(exec_prefix)/$(target_alias)
 
