--- a/branches/v3_24/acme/gprof/Makefile.in
+++ b/branches/v3_24/acme/gprof/Makefile.in
@@ -105,7 +105,7 @@ AUTOMAKE_OPTIONS = cygnus
 
 SUFFIXES = .m
 
-SUBDIRS = po
+SUBDIRS = 
 
 BASEDIR = $(srcdir)/..
 BFDDIR = $(BASEDIR)/bfd
@@ -734,7 +734,7 @@ Makefile: $(BFDDIR)/configure.in
 
 # We want install to imply install-info as per GNU standards, despite the
 # cygnus option.
-install: install-info
+install: 
 
 # Targets to rebuild dependencies in this Makefile.
 # Have to get rid of DEP1 here so that "$?" later includes all sources.
