--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,15 @@
-
+#
 TARGET_HEX=test.hex
 
 PART=30f4013
 
 PARTFAMILY=dsPIC30F
 
+
+#
+# We're explicitly defining all paths for the compiler because its
+# internal path code (use of gcc::libcpp) is broken.
+#
 CC=pic30-gcc
 AS=pic30-as
 LD=pic30-ld
@@ -18,8 +23,6 @@ HEADERS=$(wildcard *.h)
 
 INCLUDEPATH=-I$(PIC30)/support/$(PARTFAMILY)/h -I$(PIC30)/include
 
-#CFLAGS=-g -O2
-
 LIBS=	-lpic30 \
 	-lp$(subst f,F,$(PART))
 
@@ -30,8 +33,6 @@ LINKERSCRIPT=$(PIC30)/support/$(PARTFAMILY)/gld/p$(PART).gld
 
 TARGET_COFF=$(patsubst %.hex, %.coff, $(TARGET_HEX))
 OBJS=$(patsubst %.c, %.o, $(SRCS))
-LSTS=$(patsubst %.c, %.lst, $(SRCS))
-ASMS=$(patsubst %.c, %.s, $(SRCS))
 
 
 $(TARGET_HEX): $(TARGET_COFF)
@@ -40,15 +41,8 @@ $(TARGET_HEX): $(TARGET_COFF)
 $(TARGET_COFF): $(OBJS)
 	$(LD) $(LIBPATH) $(LIBS) -T$(LINKERSCRIPT) -o $@ $^
 
-%.s:	%.c $(HEADERS)
-	$(CC) $(INCLUDEPATH) -S -mcpu=$(PART) $(CFLAGS) -o $@ $<
-
 %.o:	%.c $(HEADERS)
 	$(CC) $(INCLUDEPATH) -c -mcpu=$(PART) $(CFLAGS) -o $@ $<
 
-.PHONY: clean
 clean:
-	-rm $(OBJS)
-	-rm $(TARGET)
-	-rm $(LSTS)
-	-rm $(ASMS)
+	$(RM) *.o *.coff *~
